Add basic calculator interface layout, buttons, and displays numbers

--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
     <title>Calculator</title>
 </head>
 <body>
-    
+    <main class="calc">
+        <div class="container">
+            <div class="display"></div>
+            <button class="clear" id="AC">AC</button>
+            <button class="sign" id="sign">+/-</button>
+            <button class="percent" id="percent">%</button>
+            <button class="operator" id="divide">/</button>
+            <button class="operand" id="seven">7</button>
+            <button class="operand" id="eight">8</button>
+            <button class="operand" id="nine">9</button>
+            <button class="operator" id="multiply">*</button>
+            <button class="operand" id="four">4</button>
+            <button class="operand" id="five">5</button>
+            <button class="operand" id="six">6</button>
+            <button class="operator" id="minus">-</button>
+            <button class="operand" id="one">1</button>
+            <button class="operand" id="two">2</button>
+            <button class="operand" id="three">3</button>
+            <button class="operator" id="plus">+</button>
+            <button class="operand" id="zero">0</button>
+            <button class="decimal" id="decimal">.</button>
+            <button class="operator" id="equals">=</button>
+        </div>
+    </main>
 </body>
 </html>
