--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <main class="calc">
         <div class="container">
-            <div class="display"></div>
+            <div class="display">
+            </div>
             <button class="clear" id="AC">AC</button>
             <button class="sign" id="sign">+/-</button>
             <button class="percent" id="percent">%</button>
