Gives message in place of divide by zero infinity

--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"></style>
-    <script src="script.js" defer></script>
     <title>Calculator</title>
 </head>
 <body>
     <main class="calc">
         <div class="container">
-            <div class="display">
-            </div>
+            <div class="display"></div>
             <button class="clear" id="AC">AC</button>
             <button class="sign" id="sign">+/-</button>
             <button class="percent" id="percent">%</button>
@@ -34,5 +32,6 @@
             <button class="operator" id="equals">=</button>
         </div>
     </main>
+    <script src="script.js"></script> 
 </body>
 </html>
