--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <button class="operand" id="three">3</button>
             <button class="operator" id="plus">+</button>
             <button class="operand" id="zero">0</button>
-            <button class="decimal" id="decimal">.</button>
+            <button class="operator" id="decimal">.</button>
             <button class="operator" id="equals">=</button>
         </div>
     </main>
